# sc2-planner

./: .eslintrc.js  .gitignore  .pre-commit-config.yaml  .prettierrc  LICENSE  README.md  asset-manifest.json  biome.json  index.html  package-lock.json  package.json  playwright.config.ts  postcss.config.js  precache-manifest.01c255e68848dac4b832fe00653307a1.js  precache-manifest.01fc072ce2647798e92829e633484bfc.js  precache-manifest.0348c0c136ae55dca14089224b678070.js  precache-manifest.068432461cf54a81769ebf1bf8ae1719.js  precache-manifest.0d2d3861dff23fe3a616b73863e84c1c.js  precache-manifest.1228947a75c5867e741481a2ec4923ed.js  precache-manifest.1368f8a399704cf09dbab9e8e6bd4c4e.js  precache-manifest.18aaa98ce259f531badfc545aa31b8a8.js  precache-manifest.19f89a3c05b3ad6320d7236c27c4bbcd.js  precache-manifest.1b34f0990521b805b2417e2439d24d19.js  precache-manifest.1c6c57c700be9d82e1c1c03cf57b24c2.js  precache-manifest.1c76387ae39a9b048c39cab4cd9c4973.js  precache-manifest.1d311cc3e68c8ec2357cae27df49dc1f.js  precache-manifest.1e0c710ce3c92c3ca9c1115c9c6ed247.js  precache-manifest.23f7b2ed8e38b88dc73ee0a058c07dc2.js  precache-manifest.2509244184ad6855879d956c87790e1c.js  precache-manifest.2dd1bcb6ce7a168ab4d6c652219f685f.js  precache-manifest.2dd9a76989424e98d8174dc7ef4352d4.js  precache-manifest.2ee651b14d991ed6900701aec7675ed3.js  precache-manifest.33bd5b0445da084630cfb2d5345d58b9.js  precache-manifest.34711fdac953c830c0f7bc8cc570f2a0.js  precache-manifest.384315fe3077160507a7bb5f9708d9c2.js  precache-manifest.3d3342f81c23437cb5c173391285a78e.js  precache-manifest.3da0e244d794b6a4db9dec761db4a553.js  precache-manifest.3ef7c0598916f0da8398ef4ce33f7820.js  precache-manifest.45c5649fd93ac7fd8e76843e398a59e8.js  precache-manifest.48317dccee8e5540fa41ee2b65b4f42c.js  (+77 more)
.github/: react.yml
.github/workflows/: react.yml
public/: index.html
src/: App.js  App.tsx  TODO.md  index.css  index.tsx  tailwind.css
test/: test_e2e.py  tester_helper.py
tests/: e2e.test.ts
(+495 files in other folders)
