[tool.poetry]
name = "sc2-planner"
version = "0.1.0"
description = ""
authors = ["BurnySc2 <gamingburny@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.7 <3.11"

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
pre-commit = "^2.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
